# skia-pack

./: .gitignore  .gitmodules  Package.swift  README.md  THIRD_PARTY_NOTICES.md  pack.json  pins.json
.github/workflows/: release.yml
gn/: macos.gn
scripts/: build.sh  build_harfbuzz.sh  fetch_sources.sh  package.sh  release.sh  verify.sh
tests/smoke/: smoke.cpp
